# VioraEDA

./: .gitignore  CMakeLists.txt  FLUXSCRIPT.md  README.md  SB1.flux  app.pid  bsim4.out  clean_test.flux  code_carrier_test.flxsch  copy_cm.cmake  extract_settings.cpp  flux_test.flxsch  gemini_smart_block_issue.txt  gemini_todo.md  install.sh  logic.flux  main.cpp  mm  simple_test.flxsch  test_adevice.flux  test_circ.flux  test_compile.flux  test_gate.flux  test_gate.sub  test_subckt.flux  test_subckt.py  test_switch_phase1.py  test_switch_resistor.py  tmp1qz598rq.flux  tmpb6kvkimk.flux  ui_ux_improvements.md  validation_report.json  verify_spwm.flxsch
core/: CMakeLists.txt  config_manager.cpp  config_manager.h  design_rule.cpp  design_rule.h  design_rule_engine.cpp  design_rule_engine.h  eco_types.h  flux_design_rule_bridge.cpp  flux_design_rule_bridge.h  flux_python.cpp  flux_python.h  flux_python_bindings.cpp  flux_script_engine.cpp  flux_script_engine.h  flux_workspace_bridge.cpp  flux_workspace_bridge.h  jit_context_manager.cpp  jit_context_manager.h  library_index.cpp  library_index.h  merge_conflict_dialog.cpp  merge_conflict_dialog.h  path_manager.h  pcb_sync_dialog.cpp  pcb_sync_dialog.h  project.cpp  python_embed.cpp  recent_projects.cpp  recent_projects.h  recent_workspaces.cpp  recent_workspaces.h  remote_display_server.cpp  remote_display_server.h  semantic_merge_engine.h  settings_dialog.cpp  settings_dialog.h  si_axis_formatter.h  simulation_manager.cpp  simulation_manager.h  (+6 more)
core/design_rules/: design_rule_engine.cpp  design_rule_engine.h
core/diagnostics/: debugger.cpp  debugger.h
core/flux/bridges/: flux_design_rule_bridge.h  flux_qt_bridge.cpp  flux_qt_bridge.h  flux_qt_widgets.cpp  flux_workspace_bridge.cpp  flux_workspace_bridge.h
core/flux/engine/: flux_script_engine.cpp  flux_script_engine.h
core/flux/extensions/: extension_manager.cpp  extension_manager.h
core/plugins/: plugin_manager.cpp  plugin_manager.h
core/project/: bom_manager.h  config_manager.cpp  config_manager.h  project.h  recent_workspaces.h
core/python/: python_embed.cpp
core/simulation/: flux_script_engine.h  flux_workspace_bridge.cpp  jit_bridge.cpp  jit_bridge.h  jit_context_manager.cpp  jit_context_manager.h  netlist_processor.cpp  netlist_processor.h  remote_display_server.h  simulation_manager.cpp  simulation_manager.h  simulation_types.h  spice_backend.cpp  spice_backend.h
core/simulation/model_params/: bsim3.json  bsim4.json  bsimsoi.json  hisim2.json
core/sync/: semantic_merge_engine.cpp  ws_server.h
core/ui/: color_button.cpp  color_button.h  command_palette.cpp  command_palette.h  project_audit_dialog.cpp  project_audit_dialog.h  selection_filter_widget.h  text_properties_dialog.h
core/visuals/: theme_manager.h
python/: CMakeLists.txt  __init__.py  flux_script_manager.cpp  flux_script_manager.h  gemini_bridge.cpp  gemini_bridge.h  gemini_instructions_dialog.cpp  gemini_instructions_dialog.h  gemini_panel.cpp  gemini_panel.h  python_manager.cpp  python_manager.h  requirements.txt
python/_legacy/: README.md
python/ai_pipeline/: config.py
python/ai_pipeline/ai_tools/: tools.py
python/ai_pipeline/api/: fastapi_ml_dataset_api.py  ml_dataset_api.py
python/automation/: block_shaper.flux
python/qml/: ChatCard.qml  Composer.qml  GeminiRoot.qml  PanelHeader.qml  ToolDashboard.qml  check_qml.sh  debug_qml.py
python/scripts/: adk_agent.py  fastapi_ml_dataset_api.py  gemini_query.py  ml_dataset_api.py  run_spice_model_agent.py  share_server.py  spice_baker.py  test_adk_agent.py  viospice_mcp_server.py  vspice_cli.py
python/templates/: logic_shaper.flux  pid_controller.flux  power_calculator.flux  pwm_generator.flux  signal_differencer.flux  state_machine.flux
python/vspice/: __init__.py  gemini_terminal.py  mcp.py  ui.py  v_api.py
simulator/: CMakeLists.txt  README.md  TODO.md  component-model-mapping.md
simulator/bridge/: flux_script_marshaller.h  flux_sim_bridge.cpp  flux_sim_bridge.h  model_library_manager.cpp  model_library_manager.h  sim_manager.cpp  sim_manager.h  sim_manager_fixed.cpp  sim_schematic_bridge.cpp  slang_manager.cpp  slang_manager.h  spice_model_search.cpp  spice_model_search.h
simulator/core/: raw_data_parser.cpp  raw_data_parser.h  sim_component.cpp  sim_component.h  sim_engine.cpp  sim_engine.h  sim_expression.h  sim_matrix.h  sim_meas_evaluator.cpp  sim_meas_evaluator.h  sim_model_parser.cpp  sim_net_evaluator.cpp  sim_netlist.h  sim_report_generator.cpp  sim_report_generator.h  sim_results.h  sim_rf_math.cpp  sim_rf_math.h  sim_value_parser.cpp
simulator/mixedmode/: SpiceWorkerThread.cpp  SpiceWorkerThread.h
simulator/synthesis/: bv_mos_synthesizer.cpp  bv_mos_synthesizer.h  ideal_switch_synthesizer.cpp  ideal_switch_synthesizer.h  mos_synthesizer_interface.h  power_electronics_synthesizers.cpp  power_electronics_synthesizers.h
simulator/tests/: test_model_parser.cpp  test_parser_fuzz.cpp  test_rf_math.cpp  test_slang_manager.cpp  test_value_parser.cpp
tests/integration/: CMakeLists.txt  test_benchmark.cpp  test_schematic_simulator.cpp
tests/regression/: CMakeLists.txt  test_cli.py  test_cli_regression.cpp  test_interactive_hang.cpp
ui/: CMakeLists.txt  analysis_dialog.cpp  analysis_dialog.h  app_command_server.cpp  app_command_server.h  branch_comparison_dialog.cpp  branch_comparison_dialog.h  branch_dialog.cpp  branch_dialog.h  calculator_dialog.cpp  calculator_dialog.h  csv_viewer.cpp  developer_help_window.cpp  developer_help_window.h  diff_viewer_dialog.cpp  diff_viewer_dialog.h  extensions_dialog.cpp  extensions_dialog.h  git_backend.cpp  git_backend.h  help_window.cpp  help_window.h  image_preview_panel.cpp  image_preview_panel.h  measurement_dialog.cpp  mos_circuit_architect.cpp  mos_circuit_architect.h  plugin_manager_dialog.cpp  plugin_manager_dialog.h  project_explorer_widget.cpp  project_explorer_widget.h  project_manager.cpp  project_manager.h  property_editor.cpp  property_editor.h  python_console_widget.cpp  python_console_widget.h  python_executor.cpp  python_executor.h  python_hooks.cpp  (+31 more)
(+445 files in other folders)
